evenframe_derive/tests/ui/fail/index_unknown_field.stderr
error: unknown field `nonexistent` in #[index(...)]; struct has fields: id, message, user
 --> tests/ui/fail/index_unknown_field.rs:6:16
  |
6 | #[index(fields(nonexistent))]
  |                ^^^^^^^^^^^
